cedar-policy-core/src/validator/schema/snapshots/cedar_policy_core__validator__schema__to_json__tests__roundtrip_schemas@entity_references.cedarschema.snap
---
source: cedar-policy-core/src/validator/schema/to_json.rs
expression: roundtrip_result
input_file: cedar-policy/src/ffi/test_schemas/entity_references.cedarschema
---
entity Document = {
  editors: Set<User>,
  group: Group,
  owner: User
};

entity Group;

entity User;
