cedar-policy-core/src/validator/schema/snapshots/cedar_policy_core__validator__schema__to_json__tests__roundtrip_schemas@entity_tags.cedarschema.snap
---
source: cedar-policy-core/src/validator/schema/to_json.rs
expression: roundtrip_result
input_file: cedar-policy/src/ffi/test_schemas/entity_tags.cedarschema
---
entity Document = {
  title: __cedar::String
} tags {
  classification: __cedar::String,
  department: __cedar::String
};

entity User = {
  name: __cedar::String
} tags __cedar::String;
