cedar-policy-core/src/validator/schema/snapshots/cedar_policy_core__validator__schema__to_json__tests__roundtrip_schemas@entity_with_attributes.cedarschema.snap
---
source: cedar-policy-core/src/validator/schema/to_json.rs
expression: roundtrip_result
input_file: cedar-policy/src/ffi/test_schemas/entity_with_attributes.cedarschema
---
entity User = {
  active: __cedar::Bool,
  age: __cedar::Long,
  name: __cedar::String
};
