cedar-policy-core/src/validator/schema/snapshots/cedar_policy_core__validator__schema__to_json__tests__roundtrip_schemas@enum_entities.cedarschema.snap
---
source: cedar-policy-core/src/validator/schema/to_json.rs
expression: roundtrip_result
input_file: cedar-policy/src/ffi/test_schemas/enum_entities.cedarschema
---
entity Priority enum ["low", "medium", "high"];

entity Status enum ["active", "inactive", "pending"];

entity Task = {
  priority: Priority,
  status: Status,
  title: __cedar::String
};
