cedar-policy-core/src/validator/schema/snapshots/cedar_policy_core__validator__schema__to_json__tests__roundtrip_schemas@extension_types.cedarschema.snap
---
source: cedar-policy-core/src/validator/schema/to_json.rs
expression: roundtrip_result
input_file: cedar-policy/src/ffi/test_schemas/extension_types.cedarschema
---
entity User = {
  a: __cedar::String,
  balance: __cedar::decimal,
  id: __cedar::Long,
  ip: __cedar::ipaddr
};
