cedar-policy-core/src/validator/schema/snapshots/cedar_policy_core__validator__schema__to_json__tests__roundtrip_schemas@mixed_declarations.cedarschema.snap
---
source: cedar-policy-core/src/validator/schema/to_json.rs
expression: roundtrip_result
input_file: cedar-policy/src/ffi/test_schemas/mixed_declarations.cedarschema
---
entity Admin = {
  id: __cedar::String,
  name: __cedar::String
};

entity Group = {
  id: __cedar::String,
  members: Set<User>
};

entity Status enum ["active", "inactive"];

entity User = {
  id: __cedar::String,
  name: __cedar::String
};

action "manage" in [Action::"read", Action::"write"];

action "read" appliesTo {
  principal: [Admin, User],
  resource: [Group],
  context: {}
};

action "write" appliesTo {
  principal: [Admin, User],
  resource: [Group],
  context: {}
};
